# AI-Investment

./: .gitignore  CLAUDE.md  QUICK_DEPLOYMENT_STEPS.md  README.md  SECURITY.md  TODO.md  deploy.py  package-lock.json  package.json  render.yaml
apps/api/: .bandit  .coverage  .env.example  Makefile  download_data.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.in  requirements.txt  run_tests.py  run_tests.sh  test_local_data.py
apps/api/alembic/versions/: 004_add_asset_classification.py
apps/api/app/: db_init.py  main.py
apps/api/app/core/: celery_app.py  config.py  database.py  database_pool.py  dependencies.py  env_manager.py  redis_client.py  security.py  service_providers.py  websocket_manager.py
apps/api/app/migrations/: add_google_auth.py  add_news_tables.py
apps/api/app/models/: __init__.py  asset.py  index.py  news.py  portfolio.py  signals.py  strategy.py  user.py
apps/api/app/providers/: __init__.py  base.py  marketaux_client.py
apps/api/app/providers/market_data/: __init__.py  interface.py  twelvedata.py
apps/api/app/providers/news/: __init__.py  interface.py  marketaux.py
apps/api/app/repositories/: __init__.py  asset_repository.py  asset_repository_enhanced.py  index_repository.py  interfaces.py  portfolio_repository.py  price_repository.py  strategy_repository.py  system_status_repository.py  user_repository.py
apps/api/app/routers/: analysis.py  assets.py  auth.py  background.py  benchmark.py  chatbot.py  credibility.py  diagnostics.py  extreme_signals.py  health.py  index.py  integrated_signals.py  investment.py  manual_refresh.py  metrics.py  momentum.py  monitoring.py  news.py  news_feed.py  portfolio_calculations.py  signals.py  simulation.py  strategy.py  system_status.py  tasks.py  websocket.py
apps/api/app/schemas/: __init__.py  asset.py  auth.py  benchmark.py  index.py  news.py  portfolio.py  strategy.py  validation.py
apps/api/app/services/: agro_robotics_tracker.py  alpha_detection.py  asset_classification_system.py  asset_classifier.py  backtesting.py  credibility_scorer.py  currency.py  data_collector.py  discord_notifier.py  extreme_backtest.py  extreme_events.py  fundamental_analysis.py  investment_chatbot.py  investment_engine.py  local_backtester.py  meme_velocity.py  momentum_detector.py  monitoring_service.py  news.py  osint_tracker.py  pattern_recognition.py  performance.py  performance_tracker.py  portfolio_simulator.py  refresh.py  regulatory_tracker.py  signal_integrator.py  signal_processor.py  strategy.py  supply_chain_mapper.py  technical_indicators.py  twelvedata.py
apps/api/app/services/collectors/: __init__.py  chan_collector.py  discord_collector.py  reddit_collector.py  run_collection.py  twitter_collector.py  youtube_collector.py  zero_cost_collector.py  zero_cost_orchestrator.py
apps/api/app/services/domain/: __init__.py  auth_service.py  technical_analysis_service.py
apps/api/app/services/investment/: __init__.py  investment_engine.py  recommendation_generator.py  signal_aggregator.py  signal_analyzer.py
apps/api/app/services/market_data/: __init__.py  data_transformer.py  market_cache.py  rate_limiter.py  twelvedata_client.py
apps/api/app/services/news/: __init__.py  news_processor.py  sentiment_analyzer.py
apps/api/app/services/news_modules/: __init__.py  (+4 more)
apps/api/app/tasks/: __init__.py  background_tasks.py  base.py  cleanup.py  index_computation.py  market_refresh.py  report_generation.py
apps/api/app/use_cases/: __init__.py  auth_use_cases.py  get_technical_analysis.py  google_auth_use_case.py  technical_indicators_use_cases.py
apps/api/app/utils/: admin_auth.py  cache.py  cache_utils.py  create_indexes.py  password_validator.py  run_migrations.py  security.py  token_dep.py
apps/api/scripts/: migrate_to_supabase.py
apps/api/tests/: conftest.py
apps/api/tests/contract/: test_api_contracts.py
apps/api/tests/factories/: __init__.py  asset_factory.py  base.py  portfolio_factory.py  strategy_factory.py  user_factory.py
apps/api/tests/fixtures/: factories.py
apps/api/tests/helpers/: __init__.py  adapters.py  assertions.py
apps/api/tests/integration/: test_auth_integration.py  test_portfolio_integration.py
apps/api/tests/smoke/: test_production_health.py
apps/api/tests/unit/: test_admin_auth.py  test_oauth_csrf.py
apps/math-engine/: README.md  pyproject.toml  requirements.txt
apps/math-engine/docs/: integration_strategy.md
apps/math-engine/examples/: prediction_showcase.py
apps/math-engine/src/: __init__.py
apps/math-engine/src/core/: __init__.py  types.py  validators.py
apps/math-engine/src/financial/: __init__.py  returns.py
apps/math-engine/src/ml/: ensemble.py
apps/math-engine/src/prediction/: __init__.py  trend_analysis.py
apps/math-engine/wasm/: build.py  exports.py  package.json
(+299 files in other folders)
